--- a/EstructurasDeDatos/Makefile
+++ b/EstructurasDeDatos/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ Ejemplo14 - Debug ]----------"
-	@cd "Ejemplo14" && "$(MAKE)" -f  "Ejemplo14.mk"
+	@echo "----------Building project:[ Ejemplo_Colas - Debug ]----------"
+	@"$(MAKE)" -f  "Ejemplo_Colas.mk"
 clean:
-	@echo "----------Cleaning project:[ Ejemplo14 - Debug ]----------"
-	@cd "Ejemplo14" && "$(MAKE)" -f  "Ejemplo14.mk" clean
+	@echo "----------Cleaning project:[ Ejemplo_Colas - Debug ]----------"
+	@"$(MAKE)" -f  "Ejemplo_Colas.mk" clean
